<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 DarkKat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- General -->
    <string name="app_name">DarkKat Music</string>
    <string name="settings_title">Settings</string>
    <string name="default_song_title">Title:</string>
    <string name="default_artist_title">Artist:</string>
    <string name="list_preference_default_summary">%s</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_ok">OK</string>
    <string name="permission_dialog_title">Record audio</string>
    <string name="permission_dialog_message">The music visualizer needs the permission to \"Record audion\".\nThis permisssion can be granted or denied at any time via:\n(System) Settings -> \"Apps &amp; notifications\" -> \"DarkKat Music\" -> \"Permissions\" -> \"Microphone\".\nClick on \"OK\" to show the system dialog to grant the permission,\nclick on \"Cancel\" to disable the music visualizer.</string>
    <string name="toast_message">permission denied, visualizer disabled</string>

    <!-- Notification channels -->
    <string name="music_playback_notification_chanel_title">Music playback</string>
    <string name="music_playback_notification_chanel_description">Category used for music playback notifications</string>

    <!-- Song list fragment fragment -->
    <string name="loading_media_title">Loading media ...</string>
    <string name="loading_media_missing_permission_title">Failed to load media, no permission to read media</string>

    <!-- Settings -->
    <string name="settings_cat_visualizer">Music visualizer</string>
    <string name="settings_cat_lock_screen">Lock screen</string>
    <string name="settings_cat_ui">App ui</string>
    <string name="show_visualizer_in_song_list_title">Show in song list</string>
    <string name="show_visualizer_in_song_list_summary_on">Visualizer will be shown in song list</string>
    <string name="show_visualizer_in_song_list_summary_off">Visualizer won\'t be shown in song list</string>
    <string name="show_visualizer_in_playback_control_title">Show in playback control</string>
    <string name="show_visualizer_in_playback_control_summary_on">Visualizer will be shown in playback control</string>
    <string name="show_visualizer_in_playback_control_summary_off">Visualizer won\'t be shown in playback control</string>
    <string name="show_album_art_on_lock_screen_title">Show album art</string>
    <string name="show_album_art_on_lock_screen_summary_on">Album art will be shown on lock screen</string>
    <string name="show_album_art_on_lock_screen_summary_off">Album art won\'t be shown on lock screen</string>
    <string name="theme_title">Theme</string>
    <string name="theme_material_darkkat">Material (DarkKat version)</string>
    <string name="theme_material_dark">Material (dark version)</string>
    <string name="theme_material_light">Material (light version)</string>
</resources>
